syntax="proto3";

package NUgc.NSchema.NOrgs;

import "google/protobuf/timestamp.proto";
import "kernel/ugc/proto/common/moderation.proto";
import "google/protobuf/wrappers.proto";

// view
message TOrgPhoto {
    // user content
    string PhotoId = 1;
    // server content
    string UrlTemplate = 2;
    // robot content, in offline
    TPhotoModeration Moderation = 3;

    google.protobuf.Timestamp CreatedTime = 4;

    // org permalink from sprav for photo object
    string OrgId = 5;

    // width and height of the photo
    string Width = 6;
    string Height = 7;
}

// stored inside user org
message TOrgPhotoData {
    string PhotoId = 1;
    google.protobuf.Timestamp CreatedTime = 2;
    string Blob = 3;
    repeated string Tags = 4;
    TModerationStatus.EType ModerationStatus = 5;
    google.protobuf.Timestamp ModerationTime = 6;
    bool ReviewPhoto = 7;
    google.protobuf.UInt32Value Width = 8;
    google.protobuf.UInt32Value Height = 9;
    google.protobuf.StringValue LastAppType = 10;
}

// stored inside user org review
message TOrgReviewPhotoData {
    string PhotoId = 1;
}

message TOrgPhotoBatch {
    repeated TOrgPhoto Photos = 1;
    repeated TOrgPhotoBatch OrgPhotos = 3;
    uint32 Count = 2;
}
